--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
 body {
-    background-image: url(https://cdn.pixabay.com/photo/2018/01/29/13/03/internet-3116062_960_720.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url(../../img/full-bloom.png);
 }
